--- a/CarniumWeb/index.html
+++ b/CarniumWeb/index.html
@@ -72,6 +72,30 @@
                 </a>
             </div>
         </div>
+        <footer>
+            <div class="PageDown">
+              <div class="info">
+                <p>CARNIUM</p>
+                <p>Mail : yassine.abied@gmail.com</p>
+                <p>Tél : 00 00</p>
+              </div>
+              <div class="LinkPage">
+                <ul>
+                  <li>Accueil</li>
+                  <li>Menu</li>
+                  <li>Le concept</li>
+                  <li>Notre histoire</li>
+                  <li>La team</li>
+                  <li>Contact/réservation</li>
+                  <li>Nos partenaire</li>
+                  <li>FAQ</li>
+                </ul>
+              </div>
+              <div class="SocialNetwork">
+                <p>Suivez l'actualité de votre restaurant CARNIUM</p>
+              </div>
+            </div>
+         </footer>
         <script src="scripts/index.js"></script>
     </body>
 </html>
