--- a/CarniumWeb/index.html
+++ b/CarniumWeb/index.html
@@ -81,18 +81,20 @@
               </div>
               <div class="LinkPage">
                 <ul>
-                  <li>Accueil</li>
-                  <li>Menu</li>
-                  <li>Le concept</li>
-                  <li>Notre histoire</li>
-                  <li>La team</li>
-                  <li>Contact/réservation</li>
-                  <li>Nos partenaire</li>
-                  <li>FAQ</li>
+                  <li><a href="#">Accueil</a></li>
+                  <li><a href="#">Menu</a></li>
+                  <li><a href="#">Le concept</a></li>
+                  <li><a href="#">Notre histoire</a></li>
+                  <li><a href="#">La team</a></li>
+                  <li><a href="#">Contact/réservation</a></li>
+                  <li><a href="#">Nos partenaire</a></li>
+                  <li><a href="#">FAQ</a></li>
                 </ul>
               </div>
               <div class="SocialNetwork">
                 <p>Suivez l'actualité de votre restaurant CARNIUM</p>
+                <img src="images/SVG/facebook-logo.svg" alt="logo FaceBook">
+                <img src="images/SVG/instagram.svg" alt="logo Instagram">
               </div>
             </div>
          </footer>
