finalisation footer avant responsive

--- a/CarniumWeb/index.html
+++ b/CarniumWeb/index.html
@@ -75,27 +75,31 @@
         <footer>
             <div class="PageDown">
               <div class="info">
-                <p>CARNIUM</p>
+                <p>Carnium</p>
                 <p>Mail : yassine.abied@gmail.com</p>
-                <p>Tél : 00 00</p>
+                <p>Tél : 01 46 81 58 74</p>
               </div>
               <div class="LinkPage">
                 <ul>
-                  <li><a href="#">Accueil</a></li>
-                  <li><a href="#">Menu</a></li>
-                  <li><a href="#">Le concept</a></li>
-                  <li><a href="#">Notre histoire</a></li>
-                  <li><a href="#">La team</a></li>
-                  <li><a href="#">Contact/réservation</a></li>
-                  <li><a href="#">Nos partenaire</a></li>
+                  <li><a href="#">ACCUEIL</a></li>
+                  <li><a href="#">MENU</a></li>
+                  <li><a href="#">LE CONCEPT</a></li>
+                  <li><a href="#">NOTRE HISTOIRE</a></li>
+                  <li><a href="#">LA TEAM</a></li>
+                  <li><a href="#">CONTACT/RÉSERVATION</a></li>
+                  <li><a href="#">NOS PARTENAIRES</a></li>
                   <li><a href="#">FAQ</a></li>
                 </ul>
+              </div>
+              <div class="lineV">
               </div>
               <div class="SocialNetwork">
                 <p>Suivez l'actualité de votre restaurant CARNIUM</p>
                 <img src="images/SVG/facebook-logo.svg" alt="logo FaceBook">
                 <img src="images/SVG/instagram.svg" alt="logo Instagram">
               </div>
+              <div class="lineH">
+            </div>
             </div>
          </footer>
         <script src="scripts/index.js"></script>
