--- a/CarniumWeb/index.html
+++ b/CarniumWeb/index.html
@@ -51,25 +51,52 @@
             </nav>
         </header>
         <div class="container">
-            <div class="slider1">
-                <img src="images/cat1.jpg" alt="cat1">
-            </div>
-            <div class="slider2"> 
-                <img src="images/cat2.jpg" alt="cat2">
-            </div>
-            <div class="slider3">
-                <img src="images/cat3.jpg" alt="cat3">
-            </div>
-            <div class="slider4">
-                <img src="images/cat4.jpg" alt="cat4">
-            </div>
-            <div class="navigation">
-                <a href="#" title="left" class="left">
-                    <i class="angleLeft"></i>
-                </a>
-                <a href="#" title="right" class="right">
-                    <i class="angleRight"></i>
-                </a>
+            <div id="carousel1">
+                <div class="item">
+                    <div class="item__image">
+                        <img src="images/image1.jpeg" alt="hbiba">
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="item__image">
+                        <img src="images/image2.jpeg" alt="hbiba">
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="item__image">
+                        <img src="images/image3.jpeg" alt="hbiba">
+                    </div>
+                </div>
+                 <div class="item">
+                    <div class="item__image">
+                        <img src="images/image4.jpeg" alt="hbiba">
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="item__image">
+                        <img src="images/image5.jpg" alt="hbiba">
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="item__image">
+                        <img src="images/image6.jpeg" alt="hbiba">
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="item__image">
+                        <img src="images/image7.jpg" alt="hbiba">
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="item__image">
+                        <img src="images/image8.jpeg" alt="hbiba">
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="item__image">
+                        <img src="images/image9.jpg" alt="hbiba">
+                    </div>
+                </div>
             </div>
         </div>
         <footer>
@@ -105,77 +132,3 @@
         <script src="scripts/index.js"></script>
     </body>
 </html>
-
-
-<!-- <!DOCTYPE html>
-<html lang="fr">
-    <head>
-        <meta charset="UTF-8">
-        <title>CARNIUM</title>
-        <meta name="description" content="Description de ma page"/>
-        <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet" media="all">
-        <link rel="stylesheet" href=https://kit-free.fontawesome.com/releases/latest/css/free.min.css>
-        <script src="https://kit.fontawesome.com/b8300cc200.js"></script>
-        <link href="styles/main.css" rel="stylesheet">
-    </head>
-    <body>
-        <header id="header">
-            <nav>
-                <div class="imageLogoCarnium">
-                    <img src="images/SVG/LogoRouge.svg" alt="LogoCarnium">
-                </div>
-                <ul class="container">
-                    <li class="menuItem current">
-                        <a href="index.html" title="Accueil">ACCUEIL</a>
-                    </li>
-                    <li class="menuItem current">
-                        <a href="index.html" title="Menu">MENU</a>
-                    </li>
-                    <li class="menuItem current">
-                        <a href="index.html" 
-                        title="Notre histoire">NOTRE HISTOIRE</a>
-                    </li>
-                    <li class="menuItem">
-                        <a href="index.html" title="La team">LA TEAM</a>
-                    </li>
-                    <li class="menuItem current">
-                        <a href="index.html" 
-                        title="Nos partenaires">NOS PARTENAIRES</a>
-                    </li>
-                    <li class="menuItem">
-                        <a href="index.html" title="Contact & Reservation">CONTACT / RESERVATION</a>
-                    </li>
-                    <li class="menuItem current">
-                        <a href="index.html" 
-                        title="Fas">FAQ</a>
-                    </li>
-                </ul>
-                <div class="imageLogoFacebook">
-                    <img src="images/SVG/FB.svg" alt="LogoFacebook">
-                </div>
-                <div class="imageLogoInstagram">
-                    <img src="images/SVG/instagram-logo.svg" alt="LogoFacebook">
-                </div>
-            </nav>
-        </header>
-        <main class="slider">
-            <div class="sliderContainer">
-                <img src="images/cat1.jpg" alt="cat1">
-                <img src="images/cat2.jpg" alt="cat2">
-                <img src="images/cat3.jpg" alt="cat3">
-                <img src="images/cat4.jpg" alt="cat4">
-            </div>
-            <div class="navigation">
-                <a href="#" title="left" class="left">
-                    <i class="angleLeft"></i>
-                </a>
-                <a href="#" title="right" class="right">
-                    <i class="angleRight"></i>
-                </a>
-            </div>
-        </main>
-        <script src="scripts/index.js"></script>
-    </body> -->
-
-
-
