--- a/CarniumWeb/index.html
+++ b/CarniumWeb/index.html
@@ -16,7 +16,7 @@
                 <div class="imageLogoCarnium">
                     <img src="images/SVG/LogoRouge.svg" alt="LogoCarnium">
                 </div>
-                <ul class="container">
+                <ul class="containerHeader">
                     <li class="menuItem current">
                         <a href="index.html" title="Accueil">ACCUEIL</a>
                     </li>
@@ -97,6 +97,12 @@
                         <img src="images/image9.jpg" alt="hbiba">
                     </div>
                 </div>
+            </div>
+            <div class="containerResevation">
+                <img src="images/SVG/carniumC.svg" alt="logo C de carnium">
+                <h3> CARNIUM </h3>
+                <h4>  FRESH & PREMIUM </h4>
+                <a href="#" id="reservationLink" title="Reservez"> <span>RESERVATION</span></a>
             </div>
         </div>
         <footer>
