--- a/CarniumWeb/index.html
+++ b/CarniumWeb/index.html
@@ -105,7 +105,26 @@
                 <a href="#" id="reservationLink" title="Reservez"> <span>RESERVATION</span></a>
             </div>
         </div>
-        <footer>
+        <div class="background">
+            <div class="concept">
+
+            </div>
+            <div class="livraison">
+
+            </div>
+        </div>
+        <div class="background2">
+            <div class="Histoire">
+
+            </div>
+            <div class="Team">
+
+            </div>
+            <div class="Partenaires">
+
+            </div>
+        </div>
+         <footer>
             <div class="PageDown">
               <div class="info">
                 <p>Carnium</p>
