ajout page contact

--- a/CarniumWeb/index.html
+++ b/CarniumWeb/index.html
@@ -35,7 +35,7 @@
                         title="Nos partenaires">NOS PARTENAIRES</a>
                     </li>
                     <li class="menuItem">
-                        <a href="contact.html" title="Contact & Reservation">CONTACT / RESERVATION</a>
+                        <a href="pages/contact.html" title="Contact & Reservation">CONTACT / RESERVATION</a>
                     </li>
                     <li class="menuItem current">
                         <a href="index.html" 
@@ -138,7 +138,7 @@
                   <li><a href="#">LE CONCEPT</a></li>
                   <li><a href="#">NOTRE HISTOIRE</a></li>
                   <li><a href="#">LA TEAM</a></li>
-                  <li><a href="#">CONTACT/RÉSERVATION</a></li>
+                  <li><a href="pages/contact.html">CONTACT/RÉSERVATION</a></li>
                   <li><a href="#">NOS PARTENAIRES</a></li>
                   <li><a href="#">FAQ</a></li>
                 </ul>
