--- a/CarniumWeb/pages/contact.html
+++ b/CarniumWeb/pages/contact.html
@@ -5,7 +5,7 @@
    <title>titre de ma page</title>
    <meta name="description" content="description de ma page"/>
    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-   <link rel="stylesheet" href="styles/main.css">
+   <link rel="stylesheet" href="../styles/main.css">
  </head>
  <body>
    <div class='head_block'>
