--- a/CarniumWeb/index.html
+++ b/CarniumWeb/index.html
@@ -106,22 +106,115 @@
             </div>
         </div>
         <div class="background">
-            <div class="concept">
+            <div class="container_first">
+                <div class="concept">
 
-            </div>
-            <div class="livraison">
+                </div>
+                <div class="livraison">
 
+                </div>
             </div>
         </div>
         <div class="background2">
-            <div class="Histoire">
+             <div class="container_second">
+                <div class="Histoire">
+                    <h2 class="h2Histoire">
+                        <hr>
+                        NOTRE HISTOIRE
+                        <hr>
+                    </h2>
+                    <div class="pageLeftHistoire">
+                        <div class=imageHistoire>
+                          <img src="images\NOTRE HISTOIRE.PNG" alt="NOTRE HISTOIRE">
+                        </div>
+                        <p>
+                            adcursu et superatis et tardius et nimia muro <br> tardius semitas difficultatibus venissent confisi<br> gravissimos ad augente semitas adposita
+                        </p>
+                        <p>
+                            adcursu et superatis et tardius et nimia muro <br> tardius semitas difficultatibus venissent confisi<br> gravissimos ad augente semitas adposita
+                        </p>
+                        <p>                            adcursu et superatis et tardius et nimia muro <br> tardius semitas difficultatibus venissent confisi<br> gravissimos ad augente semitas adposita
+                           adcursu et superatis et tardius et nimia muro <br> tardius semitas difficultatibus venissent confisi<br> gravissimos ad augente semitas adposita
+                        </p>
+                    </div>
+                    <div class=pageRightHistoire>
+                        <p>
+                            Quievere augente pro nimia et paulisper arbitrabantur <br> nullo et lucem superatis et enim nullo opperientes <br> nimia levitate adposita et nullo verticosi nocte flexuosas <br> opperientes venissent accolas difficultatibus tuetur <br>
+                            terrorem evadebant adcursu et superatis et tardius et <br> nimia muro tardius semitas difficultatibus venissent <br> confisi gravissimos ad augente semitas adposita lucem <br> nullo tardius adcursu venissent lucem
+                        </p>
+                        <p>
+                            Quievere augente pro nimia et paulisper arbitrabantur <br> nullo et lucem superatis et enim nullo opperientes <br> nimia levitate adposita et nullo verticosi nocte flexuosas <br> opperientes venissent accolas difficultatibus tuetur <br>
+                            terrorem evadebant adcursu et superatis et tardius et <br> nimia muro tardius semitas difficultatibus venissent <br> confisi gravissimos ad augente semitas adposita lucem <br> nullo tardius adcursu venissent lucem
+                        </p>
+                        <p>
+                            opperientes nimia levitate adposita et nullo verticosi <br> nocte flexuosas opperientes venissent accolas <br> difficultatibus tuetur terrorem evadebant adcursu et <br> superatis et tardius et nimia muro tardius semitas
+                        </p>
+                    </div>
+                </div>
 
-            </div>
-            <div class="Team">
 
-            </div>
-            <div class="Partenaires">
+                <!-- <div class="Team">
 
+                </div> -->
+                <div class="Partenaires">
+                    <h2 class=h2Partenaires>
+                        <hr>
+                        NOS PARTENAIRES
+                        <hr>
+                    </h2>
+                    <div class=partenaires_column>
+                        <img class=Ligner src="images\PARTENAIRES.PNG" alt="Ligne">
+                        <h4 class=partenaires>
+                        partenaires
+                        </h4>
+                        </p>
+                        <p>
+                        adcursu et superatis et tardius et nimia muro tardius semitas
+                        </p>
+                        <p>
+                        adcursu et superatis et tardius et nimia muro tardius semitas
+                        </p>
+                    </div>
+                    <div class=partenaires_column>
+                        <img class=Ligner src="images\PARTENAIRES.PNG" alt="Ligne">
+                        <h4 class=partenaires>
+                        partenaires
+                        </h4>
+                        </p>
+                        <p>
+                        adcursu et superatis et tardius et nimia muro tardius semitas
+                        </p>
+                        <p>
+                        adcursu et superatis et tardius et nimia muro tardius semitas
+                        </p>
+                    </div>
+                    <div class=partenaires_column>
+                        <img class=Ligner src="images\PARTENAIRES.PNG" alt="Ligne">
+                        <h4 class=partenaires>
+                        partenaires
+                        </h4>
+                        </p>
+                        <p>
+                        adcursu et superatis et tardius et nimia muro tardius semitas
+                        </p>
+                        <p>
+                        adcursu et superatis et tardius et nimia muro tardius semitas
+                        </p>
+                    </div>
+                    <div class=partenaires_column>
+                        <img class=Ligner src="images\PARTENAIRES.PNG" alt="Ligne">
+                        <h4 class=partenaires>
+                        partenaires
+                        </h4>
+                        </p>
+                        <p class=text>
+                        adcursu et superatis et tardius et nimia muro tardius semitas
+                        </p>
+                        <p class=text>
+                        adcursu et superatis et tardius et nimia muro tardius semitas
+                        </p>
+                    </div>
+                </div>
             </div>
         </div>
          <footer>
