--- a/CarniumWeb/index.html
+++ b/CarniumWeb/index.html
@@ -50,169 +50,211 @@
                 </div>
             </nav>
         </header>
-        <div class="container">
-            <div id="carousel1">
-                <div class="item">
-                    <div class="item__image">
-                        <img src="images/image1.jpeg" alt="hbiba">
-                    </div>
-                </div>
-                <div class="item">
-                    <div class="item__image">
-                        <img src="images/image2.jpeg" alt="hbiba">
-                    </div>
-                </div>
-                <div class="item">
-                    <div class="item__image">
-                        <img src="images/image3.jpeg" alt="hbiba">
-                    </div>
-                </div>
-                 <div class="item">
-                    <div class="item__image">
-                        <img src="images/image4.jpeg" alt="hbiba">
-                    </div>
-                </div>
-                <div class="item">
-                    <div class="item__image">
-                        <img src="images/image5.jpg" alt="hbiba">
-                    </div>
-                </div>
-                <div class="item">
-                    <div class="item__image">
-                        <img src="images/image6.jpeg" alt="hbiba">
-                    </div>
-                </div>
-                <div class="item">
-                    <div class="item__image">
-                        <img src="images/image7.jpg" alt="hbiba">
-                    </div>
-                </div>
-                <div class="item">
-                    <div class="item__image">
-                        <img src="images/image8.jpeg" alt="hbiba">
-                    </div>
-                </div>
-                <div class="item">
-                    <div class="item__image">
-                        <img src="images/image9.jpg" alt="hbiba">
-                    </div>
-                </div>
-            </div>
-            <div class="containerResevation">
-                <img src="images/SVG/carniumC.svg" alt="logo C de carnium">
-                <h3> CARNIUM </h3>
-                <h4>  FRESH & PREMIUM </h4>
-                <a href="#" id="reservationLink" title="Reservez"> <span>RESERVATION</span></a>
-            </div>
-        </div>
-        <div class="background">
-            <div class="container_first">
-                <div class="concept">
-
-                </div>
-                <div class="livraison">
-
-                </div>
-            </div>
-        </div>
-        <div class="background2">
-             <div class="container_second">
-                <div class="Histoire">
-                    <h2 class="h2Histoire">
-                        <hr>
-                        NOTRE HISTOIRE
-                        <hr>
-                    </h2>
-                    <div class="pageLeftHistoire">
-                        <div class=imageHistoire>
-                          <img src="images\NOTRE HISTOIRE.PNG" alt="NOTRE HISTOIRE">
+        <div class=container_aceuil>
+            <div class="container">
+                <div id="carousel1">
+                    <div class="item">
+                        <div class="item__image">
+                            <img src="images/image1.jpeg" alt="hbiba">
                         </div>
-                        <p>
-                            adcursu et superatis et tardius et nimia muro <br> tardius semitas difficultatibus venissent confisi<br> gravissimos ad augente semitas adposita
-                        </p>
-                        <p>
-                            adcursu et superatis et tardius et nimia muro <br> tardius semitas difficultatibus venissent confisi<br> gravissimos ad augente semitas adposita
-                        </p>
-                        <p>                            adcursu et superatis et tardius et nimia muro <br> tardius semitas difficultatibus venissent confisi<br> gravissimos ad augente semitas adposita
-                           adcursu et superatis et tardius et nimia muro <br> tardius semitas difficultatibus venissent confisi<br> gravissimos ad augente semitas adposita
-                        </p>
                     </div>
-                    <div class=pageRightHistoire>
-                        <p>
-                            Quievere augente pro nimia et paulisper arbitrabantur <br> nullo et lucem superatis et enim nullo opperientes <br> nimia levitate adposita et nullo verticosi nocte flexuosas <br> opperientes venissent accolas difficultatibus tuetur <br>
-                            terrorem evadebant adcursu et superatis et tardius et <br> nimia muro tardius semitas difficultatibus venissent <br> confisi gravissimos ad augente semitas adposita lucem <br> nullo tardius adcursu venissent lucem
-                        </p>
-                        <p>
-                            Quievere augente pro nimia et paulisper arbitrabantur <br> nullo et lucem superatis et enim nullo opperientes <br> nimia levitate adposita et nullo verticosi nocte flexuosas <br> opperientes venissent accolas difficultatibus tuetur <br>
-                            terrorem evadebant adcursu et superatis et tardius et <br> nimia muro tardius semitas difficultatibus venissent <br> confisi gravissimos ad augente semitas adposita lucem <br> nullo tardius adcursu venissent lucem
-                        </p>
-                        <p>
-                            opperientes nimia levitate adposita et nullo verticosi <br> nocte flexuosas opperientes venissent accolas <br> difficultatibus tuetur terrorem evadebant adcursu et <br> superatis et tardius et nimia muro tardius semitas
-                        </p>
+                    <div class="item">
+                        <div class="item__image">
+                            <img src="images/image2.jpeg" alt="hbiba">
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="item__image">
+                            <img src="images/image3.jpeg" alt="hbiba">
+                        </div>
+                    </div>
+                        <div class="item">
+                        <div class="item__image">
+                            <img src="images/image4.jpeg" alt="hbiba">
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="item__image">
+                            <img src="images/image5.jpg" alt="hbiba">
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="item__image">
+                            <img src="images/image6.jpeg" alt="hbiba">
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="item__image">
+                            <img src="images/image7.jpg" alt="hbiba">
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="item__image">
+                            <img src="images/image8.jpeg" alt="hbiba">
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="item__image">
+                            <img src="images/image9.jpg" alt="hbiba">
+                        </div>
                     </div>
                 </div>
+                <div class="containerResevation">
+                    <img src="images/SVG/carniumC.svg" alt="logo C de carnium">
+                    <h3> CARNIUM </h3>
+                    <h4>  FRESH & PREMIUM </h4>
+                    <a href="#" id="reservationLink" title="Reservez"> <span>RESERVATION</span></a>
+                </div>
+            </div>
+            <div class="background">
+                <div class="container_first">
+                    <div class="concept">
+                        <div class="concept_container1">
+                            <img class="image_plat" src="images/NOTRE HISTOIRE.PNG" alt="plat PNG">
+                            <h3>
+                                Plat
+                            </h3>
+                            <p>
+                                accompagnement
+                            </p>
+                            <img class="imge_prix1" src="images/NOTRE HISTOIRE.PNG" alt="Prix du Menu">
+
+                        </div>
+                        <div class="concept_container2">
+                            <img class="image_plat" src="images/NOTRE HISTOIRE.PNG" alt="plat PNG">
+                            <h3>
+                                Plat
+                            </h3>
+                            <p>
+                                accompagnement
+                            </p>
+                            <p>
+                                boisson
+                            </p>
+                            <img class="imge_prix2" src="images/NOTRE HISTOIRE.PNG" alt="Prix du Menu">
+                        </div>
+                        <div class="concept_container3">
+                            <img class="image_plat" src="images/NOTRE HISTOIRE.PNG" alt="plat PNG">
+                            <h3>
+                                Plat
+                            </h3>
+                            <p>
+                                accompagnement
+                            </p>
+                            <p>
+                                boisson
+                            </p>
+                            <p>
+                                dessert
+                            </p>
+                            <img class="imge_prix3" src="images/NOTRE HISTOIRE.PNG" alt="Prix du Menu">
+
+                        </div>
+                    </div>
+                    <div class="livraison">
+
+                    </div>
+                </div>
+            </div>
+            <div class="background2">
+                    <div class="container_second">
+                    <div class="Histoire">
+                        <h2 class="h2Histoire">
+                            <hr>
+                            NOTRE HISTOIRE
+                            <hr>
+                        </h2>
+                        <div class="pageLeftHistoire">
+                            <div class=imageHistoire>
+                                <img src="images\NOTRE HISTOIRE.PNG" alt="NOTRE HISTOIRE">
+                            </div>
+                            <p>
+                                adcursu et superatis et tardius et nimia muro <br> tardius semitas difficultatibus venissent confisi<br> gravissimos ad augente semitas adposita
+                            </p>
+                            <p>
+                                adcursu et superatis et tardius et nimia muro <br> tardius semitas difficultatibus venissent confisi<br> gravissimos ad augente semitas adposita
+                            </p>
+                            <p>                            adcursu et superatis et tardius et nimia muro <br> tardius semitas difficultatibus venissent confisi<br> gravissimos ad augente semitas adposita
+                                adcursu et superatis et tardius et nimia muro <br> tardius semitas difficultatibus venissent confisi<br> gravissimos ad augente semitas adposita
+                            </p>
+                        </div>
+                        <div class=pageRightHistoire>
+                            <p>
+                                Quievere augente pro nimia et paulisper arbitrabantur <br> nullo et lucem superatis et enim nullo opperientes <br> nimia levitate adposita et nullo verticosi nocte flexuosas <br> opperientes venissent accolas difficultatibus tuetur <br>
+                                terrorem evadebant adcursu et superatis et tardius et <br> nimia muro tardius semitas difficultatibus venissent <br> confisi gravissimos ad augente semitas adposita lucem <br> nullo tardius adcursu venissent lucem
+                            </p>
+                            <p>
+                                Quievere augente pro nimia et paulisper arbitrabantur <br> nullo et lucem superatis et enim nullo opperientes <br> nimia levitate adposita et nullo verticosi nocte flexuosas <br> opperientes venissent accolas difficultatibus tuetur <br>
+                                terrorem evadebant adcursu et superatis et tardius et <br> nimia muro tardius semitas difficultatibus venissent <br> confisi gravissimos ad augente semitas adposita lucem <br> nullo tardius adcursu venissent lucem
+                            </p>
+                            <p>
+                                opperientes nimia levitate adposita et nullo verticosi <br> nocte flexuosas opperientes venissent accolas <br> difficultatibus tuetur terrorem evadebant adcursu et <br> superatis et tardius et nimia muro tardius semitas
+                            </p>
+                        </div>
+                    </div>
 
 
-                <!-- <div class="Team">
+                    <!-- <div class="Team">
 
-                </div> -->
-                <div class="Partenaires">
-                    <h2 class=h2Partenaires>
-                        <hr>
-                        NOS PARTENAIRES
-                        <hr>
-                    </h2>
-                    <div class=partenaires_column>
-                        <img class=Ligner src="images\PARTENAIRES.PNG" alt="Ligne">
-                        <h4 class=partenaires>
-                        partenaires
-                        </h4>
-                        </p>
-                        <p>
-                        adcursu et superatis et tardius et nimia muro tardius semitas
-                        </p>
-                        <p>
-                        adcursu et superatis et tardius et nimia muro tardius semitas
-                        </p>
-                    </div>
-                    <div class=partenaires_column>
-                        <img class=Ligner src="images\PARTENAIRES.PNG" alt="Ligne">
-                        <h4 class=partenaires>
-                        partenaires
-                        </h4>
-                        </p>
-                        <p>
-                        adcursu et superatis et tardius et nimia muro tardius semitas
-                        </p>
-                        <p>
-                        adcursu et superatis et tardius et nimia muro tardius semitas
-                        </p>
-                    </div>
-                    <div class=partenaires_column>
-                        <img class=Ligner src="images\PARTENAIRES.PNG" alt="Ligne">
-                        <h4 class=partenaires>
-                        partenaires
-                        </h4>
-                        </p>
-                        <p>
-                        adcursu et superatis et tardius et nimia muro tardius semitas
-                        </p>
-                        <p>
-                        adcursu et superatis et tardius et nimia muro tardius semitas
-                        </p>
-                    </div>
-                    <div class=partenaires_column>
-                        <img class=Ligner src="images\PARTENAIRES.PNG" alt="Ligne">
-                        <h4 class=partenaires>
-                        partenaires
-                        </h4>
-                        </p>
-                        <p class=text>
-                        adcursu et superatis et tardius et nimia muro tardius semitas
-                        </p>
-                        <p class=text>
-                        adcursu et superatis et tardius et nimia muro tardius semitas
-                        </p>
+                    </div> -->
+                    <div class="Partenaires">
+                        <h2 class=h2Partenaires>
+                            <hr>
+                            NOS PARTENAIRES
+                            <hr>
+                        </h2>
+                        <div class=partenaires_column>
+                            <img class=Ligner src="images\PARTENAIRES.PNG" alt="Ligne">
+                            <h4 class=partenaires>
+                            partenaires
+                            </h4>
+                            </p>
+                            <p>
+                            adcursu et superatis et tardius et nimia muro tardius semitas
+                            </p>
+                            <p>
+                            adcursu et superatis et tardius et nimia muro tardius semitas
+                            </p>
+                        </div>
+                        <div class=partenaires_column>
+                            <img class=Ligner src="images\PARTENAIRES.PNG" alt="Ligne">
+                            <h4 class=partenaires>
+                            partenaires
+                            </h4>
+                            </p>
+                            <p>
+                            adcursu et superatis et tardius et nimia muro tardius semitas
+                            </p>
+                            <p>
+                            adcursu et superatis et tardius et nimia muro tardius semitas
+                            </p>
+                        </div>
+                        <div class=partenaires_column>
+                            <img class=Ligner src="images\PARTENAIRES.PNG" alt="Ligne">
+                            <h4 class=partenaires>
+                            partenaires
+                            </h4>
+                            </p>
+                            <p>
+                            adcursu et superatis et tardius et nimia muro tardius semitas
+                            </p>
+                            <p>
+                            adcursu et superatis et tardius et nimia muro tardius semitas
+                            </p>
+                        </div>
+                        <div class=partenaires_column>
+                            <img class=Ligner src="images\PARTENAIRES.PNG" alt="Ligne">
+                            <h4 class=partenaires>
+                            partenaires
+                            </h4>
+                            </p>
+                            <p class=text>
+                            adcursu et superatis et tardius et nimia muro tardius semitas
+                            </p>
+                            <p class=text>
+                            adcursu et superatis et tardius et nimia muro tardius semitas
+                            </p>
+                        </div>
                     </div>
                 </div>
             </div>
